# leaguephd-app

./: .gitignore  ChampSelect.py  DEPLOYMENT.md  Dockerfile  README.md  app.py  build_dist.sh  config.py  install_and_run.bat  install_and_run.sh  lcu_handler_web.py  mock_lcu_handler.py  requirements_web.txt  run.bat  run.sh  setup.cfg
templates/: index.html
