[metadata]
name = league-phd-web
version = 0.2.0
author = League PhD Team
author_email = contact@leaguephd.com
description = Web-based League of Legends draft analysis tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leaguephd/leaguephd-app
project_urls =
    Bug Tracker = https://github.com/leaguephd/leaguephd-app/issues
    Documentation = https://github.com/leaguephd/leaguephd-app#readme
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Flask>=2.3.0
    Flask-SocketIO>=5.3.0
    requests>=2.31.0
    lcu-driver>=3.0.0
    python-socketio>=5.8.0
    python-engineio>=4.7.0

[options.packages.find]
where = .
exclude =
    tests*

[options.entry_points]
console_scripts =
    league-phd = app:main
